--- a/website/index.html
+++ b/website/index.html
@@ -17,7 +17,6 @@
       background-color: white;
       font-family: Arial, sans-serif;
       user-select: none;
-      scroll-behavior: smooth;
     }
 
     body.sidebar-open, body.cart-open {
@@ -54,11 +53,11 @@
     .icon-btn img {
       width: 100%;
       height: auto;
-      transition: transform 0.4s ease;
+      transition: opacity 0.3s ease;
     }
 
-    .icon-btn.open img {
-      transform: rotate(45deg);
+    .icon-btn img.cross-icon {
+      content: url('https://upload.wikimedia.org/wikipedia/commons/7/71/Black_x_icon.svg');
     }
 
     .logo-container {
@@ -79,11 +78,13 @@
       line-height: 1;
       white-space: nowrap;
       margin-top: 2px;
+      transition: opacity 0.3s ease;
     }
 
     .logo-image {
       height: 88px;
       display: none;
+      transition: opacity 0.3s ease;
     }
 
     .image-box {
@@ -214,19 +215,16 @@
 <body>
 
 <header>
-  <!-- MENU -->
   <div id="menuToggle" class="icon-btn" role="button" tabindex="0">
     <img src="https://upload.wikimedia.org/wikipedia/commons/b/b2/Hamburger_icon.svg" alt="Menu" />
   </div>
 
-  <!-- LOGO -->
   <div class="logo-container" id="logoContainer" role="button" tabindex="0">
     <span class="logo-text" id="logoText">MATT SCIANNA</span>
     <img src="https://github.com/mattscianna/mattscianna/blob/main/ms-logo.png?raw=true" class="logo-image" id="logoImage" />
   </div>
 
-  <!-- SHOPPING BAG -->
-  <div id="cartIcon" class="icon-btn" title="Bag">
+  <div id="cartIcon" class="icon-btn" title="Cart">
     <img src="https://cdn-icons-png.flaticon.com/512/1170/1170678.png" alt="Bag" />
   </div>
 </header>
@@ -292,13 +290,22 @@
 
   setInterval(nextSlide, 10000);
 
+  const toggleIcon = (element, isOpen) => {
+    const img = element.querySelector('img');
+    if (isOpen) {
+      img.classList.add('cross-icon');
+    } else {
+      img.classList.remove('cross-icon');
+    }
+  };
+
   menuToggle.addEventListener('click', () => {
     const isOpen = sidebar.classList.toggle('open');
-    menuToggle.classList.toggle('open', isOpen);
+    toggleIcon(menuToggle, isOpen);
 
     if (cartSidebar.classList.contains('open')) {
       cartSidebar.classList.remove('open');
-      cartIcon.classList.remove('open');
+      toggleIcon(cartIcon, false);
       document.body.classList.remove('cart-open');
     }
 
@@ -317,11 +324,11 @@
 
   cartIcon.addEventListener('click', () => {
     const isOpen = cartSidebar.classList.toggle('open');
-    cartIcon.classList.toggle('open', isOpen);
+    toggleIcon(cartIcon, isOpen);
 
     if (sidebar.classList.contains('open')) {
       sidebar.classList.remove('open');
-      menuToggle.classList.remove('open');
+      toggleIcon(menuToggle, false);
       document.body.classList.remove('sidebar-open');
     }
 
@@ -339,14 +346,18 @@
   });
 
   logoContainer.addEventListener('click', () => {
-    window.scrollTo({ top: 0, behavior: 'smooth' });
-    setTimeout(() => location.reload(), 700);
+    location.reload();
   });
 
   window.addEventListener('scroll', () => {
-    const scrolled = window.scrollY > 50;
-    logoText.style.display = scrolled ? 'none' : 'inline';
-    logoImage.style.display = scrolled ? 'inline' : 'none';
+    const scrollY = window.scrollY;
+    if (scrollY > 60) {
+      logoText.style.display = 'none';
+      logoImage.style.display = 'block';
+    } else {
+      logoText.style.display = 'block';
+      logoImage.style.display = 'none';
+    }
   });
 
   ['menuToggle', 'logoContainer', 'cartIcon'].forEach(id => {
