--- a/website/index.html
+++ b/website/index.html
@@ -41,51 +41,6 @@
       border-bottom: 1px solid #ccc;
     }
 
-    .icon-btn {
-      width: 20px;
-      height: 20px;
-      cursor: pointer;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      position: relative;
-    }
-
-    .icon-btn img {
-      width: 100%;
-      height: auto;
-      transition: opacity 0.3s ease;
-    }
-
-    .icon-btn.open img {
-      opacity: 0;
-    }
-
-    .icon-btn::before, .icon-btn::after {
-      content: '';
-      position: absolute;
-      width: 20px;
-      height: 2px;
-      background: black;
-      transition: transform 0.3s ease, opacity 0.3s ease;
-    }
-
-    .icon-btn.open::before {
-      transform: rotate(45deg);
-    }
-
-    .icon-btn.open::after {
-      transform: rotate(-45deg);
-    }
-
-    .icon-btn:not(.open)::before {
-      transform: translateY(-6px);
-    }
-
-    .icon-btn:not(.open)::after {
-      transform: translateY(6px);
-    }
-
     .logo-container {
       position: absolute;
       left: 50%;
@@ -111,18 +66,87 @@
       display: none;
     }
 
-    .cart-count {
-      position: absolute;
-      top: -6px;
-      right: -10px;
-      font-size: 14px;
-      font-weight: bold;
-      color: black;
-      display: none;
+    .icon-btn.menu-toggle {
+      width: 24px; /* slightly smaller */
+      height: 22px;
+      position: relative;
+      cursor: pointer;
     }
 
-    .icon-btn.open .cart-count {
-      display: none !important;
+    .icon-btn.menu-toggle span {
+      position: absolute;
+      height: 3px;
+      width: 100%;
+      background-color: black;
+      left: 0;
+      transition: 0.3s ease;
+    }
+
+    .icon-btn.menu-toggle span:nth-child(1) { top: 0; }
+    .icon-btn.menu-toggle span:nth-child(2) { top: 9px; }
+    .icon-btn.menu-toggle span:nth-child(3) { bottom: 0; }
+
+    .icon-btn.menu-toggle.open span:nth-child(1) {
+      transform: rotate(45deg);
+      top: 9px;
+    }
+
+    .icon-btn.menu-toggle.open span:nth-child(2) {
+      opacity: 0;
+    }
+
+    .icon-btn.menu-toggle.open span:nth-child(3) {
+      transform: rotate(-45deg);
+      bottom: 9px;
+    }
+
+    .icon-btn.cart-toggle {
+      position: relative;
+      width: 24px;
+      height: 24px;
+      cursor: pointer;
+    }
+
+    .icon-btn.cart-toggle img {
+      width: 100%;
+      height: auto;
+      transition: opacity 0.3s ease;
+    }
+
+    .icon-btn.cart-toggle.open::before,
+    .icon-btn.cart-toggle.open::after {
+      content: "";
+      position: absolute;
+      width: 24px;
+      height: 2px;
+      background: black;
+      top: 11px;
+      left: 0;
+      transform-origin: center;
+      transition: 0.3s ease;
+    }
+
+    .icon-btn.cart-toggle.open::before {
+      transform: rotate(45deg);
+    }
+
+    .icon-btn.cart-toggle.open::after {
+      transform: rotate(-45deg);
+    }
+
+    .icon-btn.cart-toggle.open img {
+      opacity: 0;
+    }
+
+    .cart-count {
+      position: absolute;
+      top: -10px;
+      right: -10px;
+      color: black;
+      font-size: 11px;
+      font-weight: bold;
+      font-family: sans-serif;
+      display: none;
     }
 
     .image-box {
@@ -253,25 +277,50 @@
 <body>
 
 <header>
-  <!-- MENU -->
-  <div id="menuToggle" class="icon-btn" role="button" tabindex="0">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/b/b2/Hamburger_icon.svg" alt="Menu" />
+  <div id="menuToggle" class="icon-btn menu-toggle" role="button" tabindex="0">
+    <span></span>
+    <span></span>
+    <span></span>
   </div>
 
-  <!-- LOGO -->
   <div class="logo-container" id="logoContainer" role="button" tabindex="0">
     <span class="logo-text" id="logoText">MATT SCIANNA</span>
     <img src="https://github.com/mattscianna/mattscianna/blob/main/ms-logo.png?raw=true" class="logo-image" id="logoImage" />
   </div>
 
-  <!-- SHOPPING BAG -->
-  <div id="cartIcon" class="icon-btn" title="Cart">
+  <div id="cartIcon" class="icon-btn cart-toggle" title="Cart">
     <img src="https://cdn-icons-png.flaticon.com/512/1170/1170678.png" alt="Bag" />
     <div id="cartCount" class="cart-count">0</div>
   </div>
 </header>
 
-<!-- ... same slides, products, etc. -->
+<div class="image-box">
+  <div class="slider" id="slider">
+    <div class="slide" style="background-image: url('https://via.placeholder.com/600x400/FF5733');"></div>
+    <div class="slide" style="background-image: url('https://via.placeholder.com/600x400/33C3FF');"></div>
+    <div class="slide" style="background-image: url('https://via.placeholder.com/600x400/8D33FF');"></div>
+  </div>
+  <div class="arrow left" onclick="prevSlide()"></div>
+  <div class="arrow right" onclick="nextSlide()"></div>
+</div>
+
+<a href="/jersey/red" style="text-decoration: none; color: inherit;">
+  <div class="product-image-box"></div>
+</a>
+<div class="product-info">
+  <div class="product-title">TWO-FIVE JERSEY</div>
+  <div class="product-color">RED</div>
+  <div class="product-price">$50.00</div>
+</div>
+
+<a href="/jersey/white" style="text-decoration: none; color: inherit;">
+  <div class="product-image-box"></div>
+</a>
+<div class="product-info">
+  <div class="product-title">TWO-FIVE JERSEY</div>
+  <div class="product-color">WHITE</div>
+  <div class="product-price">$50.00</div>
+</div>
 
 <nav id="sidebar" class="sidebar"><p>Menu sidebar content goes here.</p></nav>
 <nav id="cartSidebar" class="cart-sidebar"><p>Cart sidebar content goes here.</p></nav>
@@ -281,82 +330,78 @@
   const sidebar = document.getElementById('sidebar');
   const cartIcon = document.getElementById('cartIcon');
   const cartSidebar = document.getElementById('cartSidebar');
-  const cartCount = document.getElementById('cartCount');
-  const logoContainer = document.getElementById('logoContainer');
   const logoText = document.getElementById('logoText');
   const logoImage = document.getElementById('logoImage');
+  const logoContainer = document.getElementById('logoContainer');
+  const slider = document.getElementById('slider');
+  const cartCount = document.getElementById('cartCount');
 
-  let cartItems = 0;
+  let currentIndex = 0;
   let scrollPosition = 0;
+  let cartItems = 0;
 
-  function updateCartCount() {
-    if (cartItems > 0) {
-      cartCount.textContent = cartItems;
-      cartCount.style.display = 'block';
-    } else {
-      cartCount.style.display = 'none';
-    }
+  const slides = slider.children;
+
+  function updateSlide(index) {
+    slider.style.transform = `translateX(-${index * 100}%)`;
   }
 
+  function nextSlide() {
+    currentIndex = (currentIndex + 1) % slides.length;
+    updateSlide(currentIndex);
+  }
+
+  function prevSlide() {
+    currentIndex = (currentIndex - 1 + slides.length) % slides.length;
+    updateSlide(currentIndex);
+  }
+
+  setInterval(nextSlide, 10000);
+
   menuToggle.addEventListener('click', () => {
-    const isOpen = sidebar.classList.toggle('open');
-    menuToggle.classList.toggle('open', isOpen);
+    const isOpen = menuToggle.classList.toggle('open');
+    sidebar.classList.toggle('open');
     if (cartSidebar.classList.contains('open')) {
       cartSidebar.classList.remove('open');
       cartIcon.classList.remove('open');
-      document.body.classList.remove('cart-open');
-    }
-    if (isOpen) {
-      scrollPosition = window.scrollY;
-      document.body.classList.add('sidebar-open');
-      document.body.style.top = `-${scrollPosition}px`;
-      document.body.style.position = 'fixed';
-    } else {
-      document.body.classList.remove('sidebar-open');
-      document.body.style.position = '';
-      document.body.style.top = '';
-      window.scrollTo(0, scrollPosition);
     }
   });
 
   cartIcon.addEventListener('click', () => {
-    const isOpen = cartSidebar.classList.toggle('open');
-    cartIcon.classList.toggle('open', isOpen);
-    if (sidebar.classList.contains('open')) {
+    const isOpen = cartIcon.classList.toggle('open');
+    cartSidebar.classList.toggle('open');
+    if (menuToggle.classList.contains('open')) {
       sidebar.classList.remove('open');
       menuToggle.classList.remove('open');
-      document.body.classList.remove('sidebar-open');
-    }
-    if (isOpen) {
-      scrollPosition = window.scrollY;
-      document.body.classList.add('cart-open');
-      document.body.style.top = `-${scrollPosition}px`;
-      document.body.style.position = 'fixed';
-    } else {
-      document.body.classList.remove('cart-open');
-      document.body.style.position = '';
-      document.body.style.top = '';
-      window.scrollTo(0, scrollPosition);
     }
   });
 
-  logoContainer.addEventListener('click', () => {
+  logoContainer.addEventListener('click', (e) => {
+    e.preventDefault();
     setTimeout(() => {
-      window.scrollTo(0, 0);
-      location.reload();
-    }, 600);
+      location.href = location.origin + location.pathname;
+    }, 200);
   });
 
-  updateCartCount();
-
-  // For demo: simulate adding to cart
-  // cartItems = 1; updateCartCount();
-
-  ['menuToggle', 'logoContainer', 'cartIcon'].forEach(id => {
-    document.getElementById(id).addEventListener('keydown', (e) => {
-      if (e.key === 'Enter') e.target.click();
-    });
+  window.addEventListener('scroll', () => {
+    const scrollY = window.scrollY;
+    if (scrollY > 60) {
+      logoText.style.display = 'none';
+      logoImage.style.display = 'block';
+    } else {
+      logoText.style.display = 'block';
+      logoImage.style.display = 'none';
+    }
   });
+
+  function addToCart() {
+    cartItems++;
+    cartCount.innerText = cartItems;
+    cartCount.style.display = cartItems > 0 ? 'block' : 'none';
+  }
+
+  setTimeout(addToCart, 3000);
 </script>
+
 </body>
 </html>
