--- a/website/index.html
+++ b/website/index.html
@@ -66,8 +66,8 @@
     }
 
     .icon-btn.menu-toggle {
-      width: 28px;
-      height: 18px;
+      width: 24px;
+      height: 24px;
       position: relative;
       cursor: pointer;
     }
@@ -81,12 +81,12 @@
       transition: 0.3s ease;
     }
 
-    .icon-btn.menu-toggle span:nth-child(1) { top: 0; }
-    .icon-btn.menu-toggle span:nth-child(2) { top: 7.5px; }
-    .icon-btn.menu-toggle span:nth-child(3) { bottom: 0; }
+    .icon-btn.menu-toggle span:nth-child(1) { top: 2px; }
+    .icon-btn.menu-toggle span:nth-child(2) { top: 10.5px; }
+    .icon-btn.menu-toggle span:nth-child(3) { bottom: 2px; }
 
     .icon-btn.menu-toggle.open span:nth-child(1) {
-      top: 7.5px;
+      top: 10.5px;
       transform: rotate(45deg);
     }
 
@@ -95,7 +95,7 @@
     }
 
     .icon-btn.menu-toggle.open span:nth-child(3) {
-      top: 7.5px;
+      top: 10.5px;
       transform: rotate(-45deg);
     }
 
@@ -370,6 +370,7 @@
   cartIcon.addEventListener('click', () => {
     const isOpen = cartIcon.classList.toggle('open');
     cartSidebar.classList.toggle('open');
+    cartCount.style.display = 'none'; // hide cart count on open
     if (menuToggle.classList.contains('open')) {
       sidebar.classList.remove('open');
       menuToggle.classList.remove('open');
@@ -396,7 +397,9 @@
   function addToCart() {
     cartItems++;
     cartCount.innerText = cartItems;
-    cartCount.style.display = cartItems > 0 ? 'block' : 'none';
+    if (!cartIcon.classList.contains('open')) {
+      cartCount.style.display = cartItems > 0 ? 'block' : 'none';
+    }
   }
 
   // Demo: simulate adding to cart
